# episim

./: CMakeLists.txt
analysis/: CMakeLists.txt  dynamics.py  model-reader.c  trace-reader.c
model/: CMakeLists.txt  main.c  model.c  model.h  population.c  trace.c  util.c
src/: CMakeLists.txt  main.c  model.c  model.h  population.c  util.c
