cmake_minimum_required(VERSION 3.10)

set (RD "${CMAKE_CURRENT_SOURCE_DIR}/ROSS/")
set (ND "${CMAKE_CURRENT_SOURCE_DIR}/src/")
set (ND "${CMAKE_CURRENT_SOURCE_DIR}/analysis/")

ADD_SUBDIRECTORY(${RD})
ADD_SUBDIRECTORY(${ND})

set_target_properties(
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
