cmake_minimum_required(VERSION 3.10)
project(EPISim)

set (RD "${CMAKE_CURRENT_SOURCE_DIR}/ROSS/")
set (MD "${CMAKE_CURRENT_SOURCE_DIR}/model/")
set (AD "${CMAKE_CURRENT_SOURCE_DIR}/analysis/")

ADD_SUBDIRECTORY(${RD})
ADD_SUBDIRECTORY(${MD})
ADD_SUBDIRECTORY(${AD})

set_target_properties(
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
